Fix 'Inspection Results'